@@ -1,4 +1,5 @@
 - Upgrade test requirements pytest to 8.3.5 and syrupy to 4.9.0
+- #119 DK: Holiday "Store bededag" was abolished in 2023
 
 2025.1.0
 -      DE: Document legal sources for region 'TH' (Thüringen)
